<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hello"
        android:title="@string/hello"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_goodbye"
        android:title="@string/goodbye"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_shopping_cart"
        android:title="@string/shopping_cart"
        android:icon="@drawable/ic_add_shopping_cart_white_24dp"
        app:showAsAction="ifRoom"/>




</menu>
